# ets2-local-radio

./: .gitattributes  .gitignore  README.md  SETTINGS.md  package-lock.json  package.json
src-tauri/: Cargo.toml  remote.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/overlay-bridge/: ImageExtensions.cs  OverlayBridge.csproj  OverlayManager.cs  Program.cs  WebSocketServer.cs  app.manifest
src-tauri/src/: lib.rs  main.rs
src-tauri/src/remote/: messages.rs  mod.rs
web/: index-modern.html  index.html
web/lang/: de-DE.json  en-GB.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  nl-NL.json  pl-PL.json  pt-BR.json  ru-RU.json  tr-TR.json  zh-CN.json
web/lib/css/: modern-theme.css
web/lib/js/: main-modern.js  main.js  tauri-bridge.js
