[package]
name = "ets2-local-radio"
version = "1.0.0"
description = "ETS2/ATS Local Radio - Listen to local radio stations while trucking"
authors = ["ETS2 Local Radio"]
edition = "2021"

[lib]
name = "ets2_local_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
shared_memory = "0.12"
memmap2 = "0.9"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
